2005-11-01  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by harrison
        
        Tweaked my previous fix for caret movement while scrolling.

        * khtml/editing/SelectionController.cpp:
        (khtml::SelectionController::SelectionController): Forgot to copy m_caretPositionOnLayout.
        (khtml::SelectionController::operator=): Ditto.
        (khtml::SelectionController::layout): Initialize m_caretPositionOnLayout to a dummy value when the selection isNone.
        * khtml/editing/SelectionController.h: Tweaked my comment.

2005-11-01  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by darin
        
        Fixes <rdar://problem/4074536> Seed: Mail crash adjusting quote level - KHTMLPart::computeAndSetTypingStyle
        
        No test cases added, requires Mail

        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge typingStyle]):
        Crashes were happening after a style was merged with itself.  Mail was doing a setTypingStyle
        with a pointer to our internal typing style.  Fix is to only hand out copies of our typingStyle.

2005-11-01  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by harrison
        
        Fixed <rdar://problem/3690705> caret does not move when scrolling overflow: auto editable area

        * manual-tests/caretScrolling.html: Added.

        * khtml/editing/SelectionController.cpp:
        (khtml::SelectionController::SelectionController): Removed the unused expectedVisibleRect
        (khtml::SelectionController::operator=): Ditto.
        (khtml::SelectionController::layout): Save the caret's absolute position on layout.
        (khtml::SelectionController::caretRect): Adjust the returned caret rect for offset due to scrolling since the last layout.
        (khtml::SelectionController::paintCaret):
        * khtml/editing/SelectionController.h:
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::nextKeyViewInFrame): Small tweak to a previous change.